--- a/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
@@ -9,30 +9,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="299.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.projet_ap.RenseignementController">
    <children>
-      <Label alignment="CENTER" prefHeight="35.0" prefWidth="299.0" text="ETAT DE FRAIS ENGAGES" textAlignment="CENTER" textFill="#272e5b">
+      <Separator layoutX="-1.0" layoutY="43.0" prefHeight="3.0" prefWidth="299.0" />
+      <Label layoutX="107.0" layoutY="111.0" prefHeight="14.0" prefWidth="94.0" text="Frais Forfaitaires" textFill="#3f6bab">
          <font>
-            <Font name="Times New Roman Bold" size="17.0" />
-         </font>
-      </Label>
-      <Separator layoutY="34.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="14.0" layoutY="48.0" prefHeight="14.0" prefWidth="53.0" text="Visiteur :" textFill="#3f6bab">
-         <font>
-            <Font name="Times New Roman Bold" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="71.0" layoutY="48.0" text="Matricule :">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="71.0" layoutY="74.0" prefHeight="14.0" prefWidth="53.0" text="Nom :">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="7.0" layoutY="146.0" prefHeight="14.0" prefWidth="87.0" text="Frais Forfaitaires">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
+            <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
       <Label layoutX="100.0" layoutY="146.0" prefHeight="14.0" prefWidth="44.0" text="Quantité">
@@ -73,26 +53,19 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="177.0" layoutY="168.0" text="80.00 €">
+      <Label fx:id="muNuitee" layoutX="177.0" layoutY="168.0" prefHeight="17.0" prefWidth="36.0" text=" ">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="177.0" layoutY="193.0" text="29.00 €">
+      <Label fx:id="muRepas" layoutX="177.0" layoutY="193.0" prefHeight="17.0" prefWidth="36.0" text=" ">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="20.0" layoutY="106.0" text="Mois :" textFill="#3f6bab">
-         <font>
-            <Font name="Times New Roman Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField layoutX="66.0" layoutY="101.0" prefHeight="25.0" prefWidth="208.0" promptText="mm/aaaa" />
-      <TextField fx:id="nbrNuitee" layoutX="96.0" layoutY="163.0" onAction="#calculerTTN" prefHeight="25.0" prefWidth="53.0" promptText="00" />
+      <TextField fx:id="nbrNuitee" layoutX="96.0" layoutY="163.0" onAction="#calculerTTN" onMouseDragExited="#calculerTTN" prefHeight="25.0" prefWidth="53.0" promptText="00" />
       <TextField fx:id="nbrRepas" layoutX="96.0" layoutY="188.0" onAction="#calculerTTR" prefHeight="25.0" prefWidth="53.0" promptText="00" />
-      <TextField fx:id="nbrKilo" layoutX="96.0" layoutY="213.0" onAction="#calculerTTK" prefHeight="25.0" prefWidth="53.0" promptText="00" />
-      <TextField fx:id="mtntKilo" layoutX="149.0" layoutY="213.0" onAction="#calculerTTK" prefHeight="25.0" prefWidth="94.0" promptText="00.00€" />
+      <TextField fx:id="nbrKilo" layoutX="96.0" layoutY="213.0" onAction="#calculerTTK" onMouseDragExited="#calculerTTK" prefHeight="25.0" prefWidth="53.0" promptText="00" />
       <Label layoutX="117.0" layoutY="259.0" text="Autres Frais" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold Italic" size="12.0" />
@@ -120,16 +93,10 @@
       <TextField layoutX="207.0" layoutY="316.0" prefHeight="25.0" prefWidth="94.0" />
       <TextField layoutX="-1.0" layoutY="341.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
       <TextField layoutX="-3.0" layoutY="366.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
-      <TextField layoutX="-3.0" layoutY="391.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
-      <TextField layoutX="-3.0" layoutY="416.0" prefHeight="25.0" prefWidth="101.0" promptText="jj/mm" />
       <TextField layoutX="96.0" layoutY="341.0" prefHeight="25.0" prefWidth="113.0" />
       <TextField layoutX="96.0" layoutY="366.0" prefHeight="25.0" prefWidth="113.0" />
-      <TextField layoutX="96.0" layoutY="391.0" prefHeight="25.0" prefWidth="113.0" />
-      <TextField layoutX="96.0" layoutY="416.0" prefHeight="25.0" prefWidth="113.0" />
       <TextField layoutX="207.0" layoutY="341.0" prefHeight="25.0" prefWidth="94.0" />
       <TextField layoutX="207.0" layoutY="366.0" prefHeight="25.0" prefWidth="94.0" />
-      <TextField layoutX="207.0" layoutY="391.0" prefHeight="25.0" prefWidth="94.0" />
-      <TextField layoutX="207.0" layoutY="416.0" prefHeight="25.0" prefWidth="94.0" />
       <Button layoutX="89.0" layoutY="451.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="128.0" text="Signer et Soumettre" />
       <Button fx:id="BackButton" layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#GoBack" text="Revenir en arrière" />
       <Label fx:id="ttNuitee" layoutX="247.0" layoutY="167.0" prefHeight="17.0" prefWidth="44.0" textAlignment="CENTER">
@@ -140,19 +107,21 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="ttNuitee" layoutX="247.0" layoutY="218.0" prefHeight="17.0" prefWidth="44.0">
+      <Label fx:id="ttKilometrage" layoutX="247.0" layoutY="218.0" prefHeight="17.0" prefWidth="44.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="Matricule" layoutX="148.0" layoutY="43.0" prefHeight="25.0" prefWidth="128.0">
+      <Label alignment="CENTER" layoutX="-2.0" prefHeight="44.0" prefWidth="299.0" text="ETAT DE FRAIS ENGAGES" textAlignment="CENTER" textFill="#272e5b">
+         <font>
+            <Font name="Times New Roman Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="muKilometrage" layoutX="177.0" layoutY="217.0" prefHeight="17.0" prefWidth="36.0" text=" " />
+      <Label layoutX="9.0" layoutY="46.0" text="Connecté(e) en temp que :">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="Nom" layoutX="148.0" layoutY="68.0" prefHeight="25.0" prefWidth="128.0">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
+      <Label fx:id="idConnexion" layoutX="140.0" layoutY="45.0" prefHeight="17.0" prefWidth="127.0" />
    </children>
 </AnchorPane>
