--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -48,26 +48,17 @@
          </font>
       </Label>
       <Separator layoutY="34.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="14.0" layoutY="48.0" prefHeight="14.0" prefWidth="53.0" text="Visiteur :" textFill="#3f6bab">
+      <Label layoutX="14.0" layoutY="43.0" prefHeight="14.0" prefWidth="53.0" text="Visiteur :" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="Matricule" layoutX="140.0" layoutY="42.0" prefHeight="25.0" prefWidth="134.0" promptText="Matricule" />
-      <Label layoutX="71.0" layoutY="48.0" text="Matricule :">
+      <TextField fx:id="Matricule" layoutX="94.0" layoutY="59.0" prefHeight="25.0" prefWidth="134.0" promptText="Ex: NRD/106-04" />
+      <Label layoutX="31.0" layoutY="63.0" text="Matricule :">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="71.0" layoutY="74.0" prefHeight="14.0" prefWidth="53.0" text="Nom :">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="nom" layoutX="109.0" layoutY="70.0" prefHeight="26.0" prefWidth="165.0" promptText="Ex: Dupont Roger">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font></TextField>
       <Label layoutX="7.0" layoutY="203.0" prefHeight="14.0" prefWidth="87.0" text="Frais Forfaitaires">
          <font>
             <Font name="Times New Roman" size="12.0" />
@@ -85,7 +76,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="226.0" layoutY="203.0" prefHeight="14.0" prefWidth="36.0" text="Total">
+      <Label layoutX="239.0" layoutY="203.0" prefHeight="14.0" prefWidth="36.0" text="Total">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
@@ -149,8 +140,8 @@
          </font>
       </Label>
       <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" onAction="#validation" prefHeight="35.0" prefWidth="134.0" text="Valider" />
-      <Button layoutX="15.0" layoutY="560.0" mnemonicParsing="false" text="Revenir en arrière" />
-      <Button layoutX="75.0" layoutY="146.0" mnemonicParsing="false" onAction="#validation" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
+      <Button layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#switchToAcceuil" text="Revenir en arrière" />
+      <Button layoutX="75.0" layoutY="145.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
@@ -171,42 +162,40 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="TotalNuitee" alignment="CENTER" layoutX="219.0" layoutY="224.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
+      <Label fx:id="TotalNuitee" alignment="CENTER" layoutX="231.0" layoutY="224.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="TotalRepas" alignment="CENTER" layoutX="219.0" layoutY="250.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
+      <Label fx:id="TotalRepas" alignment="CENTER" layoutX="230.0" layoutY="250.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="TotalKilometrage" alignment="CENTER" layoutX="218.0" layoutY="275.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
+      <Label fx:id="TotalKilometrage" alignment="CENTER" layoutX="230.0" layoutY="275.0" prefHeight="18.0" prefWidth="44.0" text="0.00 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
       <Label fx:id="AutreDate1" layoutX="1.0" layoutY="372.0" prefHeight="26.0" prefWidth="62.0" />
       <Label fx:id="AutreLibelle1" layoutX="63.0" layoutY="372.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant1" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="82.0" />
+      <Label fx:id="AutreMontant1" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="72.0" />
       <Label fx:id="AutreDate2" layoutX="1.0" layoutY="398.0" prefHeight="26.0" prefWidth="62.0" />
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant2" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="82.0" />
+      <Label fx:id="AutreMontant2" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
       <Label fx:id="AutreDate3" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="82.0" />
+      <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
       <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutY="397.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutY="371.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutX="267.0" layoutY="221.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <CheckBox fx:id="CheckNuitee" layoutX="276.0" layoutY="224.0" mnemonicParsing="false" onAction="#AutorisationNuit" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm" layoutX="276.0" layoutY="274.0" mnemonicParsing="false" onAction="#AutorisationKm" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckRepas" layoutX="276.0" layoutY="249.0" mnemonicParsing="false" onAction="#AutorisationRepas" prefHeight="18.0" prefWidth="17.0" />
+      <Separator layoutX="296.0" layoutY="221.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="62.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="156.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="237.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
+      <Separator layoutX="229.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <CheckBox fx:id="CheckKm1" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" onAction="#AutorisationAutre3" prefHeight="18.0" prefWidth="17.0" />
       <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" onAction="#AutorisationAutre2" prefHeight="18.0" prefWidth="17.0" />
       <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" onAction="#AutorisationAutre1" prefHeight="18.0" prefWidth="17.0" />
+      <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
    </children>
 </AnchorPane>
