--- a/demo/src/main/resources/fr/projet_ap/ClientC.fxml
+++ b/demo/src/main/resources/fr/projet_ap/ClientC.fxml
@@ -13,7 +13,7 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="suivi" layoutX="31.0" layoutY="347.0" prefHeight="80.0" prefWidth="240.0" text="Portail de suivi de paiment" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="suivi" layoutX="31.0" layoutY="347.0" onAction="#switchToSuivi" prefHeight="80.0" prefWidth="240.0" text="Portail de suivi de paiment" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="20.0" />
          </font>
@@ -23,7 +23,7 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <Hyperlink layoutX="110.0" layoutY="563.0" text="Deconnection" />
+      <Hyperlink layoutX="110.0" layoutY="563.0" onAction="#switchToAcceuil" text="Deconnection" />
       <Label fx:id="compte" layoutX="-1.0" layoutY="-2.0" prefHeight="33.0" prefWidth="302.0" textAlignment="CENTER">
          <font>
             <Font size="15.0" />
