--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -139,7 +139,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" onAction="#validation" prefHeight="35.0" prefWidth="134.0" text="Valider" />
+      <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
       <Button layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#switchToAcceuil" text="Revenir en arrière" />
       <Button layoutX="75.0" layoutY="145.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
@@ -193,9 +193,9 @@
       <Separator layoutX="62.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="156.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="229.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <CheckBox fx:id="CheckKm1" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" onAction="#AutorisationAutre3" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" onAction="#AutorisationAutre2" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" onAction="#AutorisationAutre1" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckKm1" layoutX="258.0" layoutY="428.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
+      <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
    </children>
 </AnchorPane>
