--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -54,9 +54,9 @@
          </font>
       </Label>
       <TextField fx:id="Matricule" layoutX="94.0" layoutY="59.0" prefHeight="25.0" prefWidth="134.0" promptText="Ex: NRD/106-04" />
-      <Label layoutX="31.0" layoutY="63.0" text="Matricule :">
+      <Label layoutX="30.0" layoutY="63.0" text="Matricule :">
          <font>
-            <Font name="Times New Roman" size="12.0" />
+            <Font name="Times New Roman" size="14.0" />
          </font>
       </Label>
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
@@ -65,7 +65,6 @@
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
       <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
       <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="477.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
       <Label layoutX="7.0" layoutY="233.0" prefHeight="14.0" prefWidth="87.0" text="Frais Forfaitaires">
          <font>
@@ -125,34 +124,29 @@
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="Mois" layoutX="66.0" layoutY="101.0" prefHeight="25.0" prefWidth="208.0" promptText="Mois" />
-      <Label layoutX="117.0" layoutY="346.0" text="Autres Frais" textFill="#3f6bab">
+      <Label layoutX="117.0" layoutY="334.0" text="Autres Frais" textFill="#3f6bab">
          <font>
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="19.0" layoutY="385.0" text="Date">
+      <Label layoutX="19.0" layoutY="357.0" text="Date">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Separator layoutX="-1.0" layoutY="382.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="93.0" layoutY="385.0" text="Libellé">
+      <Separator layoutX="-1.0" layoutY="372.0" prefHeight="3.0" prefWidth="299.0" />
+      <Label layoutX="93.0" layoutY="356.0" prefHeight="18.0" prefWidth="34.0" text="Libellé">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="179.0" layoutY="385.0" text="Montant">
+      <Label layoutX="175.0" layoutY="358.0" text="Montant">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-<<<<<<< HEAD
-      <Button layoutX="87.0" layoutY="506.0" mnemonicParsing="false" onAction="#validation" prefHeight="35.0" prefWidth="134.0" text="Valider" />
-=======
       <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
->>>>>>> 52a6e3f654416ce662b59c61a13ceb13a465c298
-      <Button layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#switchToAcceuil" text="Revenir en arrière" />
+      <Button layoutX="102.0" layoutY="521.0" mnemonicParsing="false" onAction="#switchToAcceuil" text="Revenir en arrière" />
       <Button layoutX="75.0" layoutY="145.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
             <Font name="Times New Roman" size="12.0" />
@@ -188,29 +182,8 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-<<<<<<< HEAD
-      <Label fx:id="AutreDate1" layoutX="1.0" layoutY="402.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle1" layoutX="63.0" layoutY="402.0" prefHeight="26.0" prefWidth="94.0" />
-      <Label fx:id="AutreMontant1" layoutX="158.0" layoutY="402.0" prefHeight="26.0" prefWidth="72.0" />
-      <Label fx:id="AutreDate2" layoutX="1.0" layoutY="428.0" prefHeight="26.0" prefWidth="62.0" />
-      <Separator layoutY="401.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutX="296.0" layoutY="251.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Label layoutX="243.0" layoutY="382.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
-      <Separator layoutX="156.0" layoutY="403.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="229.0" layoutY="403.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <CheckBox fx:id="CheckKm1" layoutX="258.0" layoutY="456.0" mnemonicParsing="false" onAction="#AutorisationAutre3" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="430.0" mnemonicParsing="false" onAction="#AutorisationAutre2" prefHeight="18.0" prefWidth="17.0" />
-      <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="404.0" mnemonicParsing="false" onAction="#AutorisationAutre1" prefHeight="18.0" prefWidth="17.0" />
-      <Separator layoutX="62.0" layoutY="403.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Label layoutX="18.0" layoutY="190.0" text="Vous consultez la fiche de :" textFill="#3f6bab">
-         <font>
-            <Font name="Times New Roman Bold" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="165.0" layoutY="189.0" prefHeight="17.0" prefWidth="87.0" text=" " />
-=======
-      <Label fx:id="AutreDate1" layoutX="1.0" layoutY="372.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle1" layoutX="63.0" layoutY="372.0" prefHeight="26.0" prefWidth="94.0" />
+      <Label fx:id="AutreDate1" layoutX="1.0" layoutY="371.0" prefHeight="26.0" prefWidth="62.0" />
+      <Label fx:id="AutreLibelle1" layoutX="64.0" layoutY="371.0" prefHeight="26.0" prefWidth="94.0" />
       <Label fx:id="AutreMontant1" layoutX="158.0" layoutY="372.0" prefHeight="26.0" prefWidth="72.0" />
       <Label fx:id="AutreDate2" layoutX="1.0" layoutY="398.0" prefHeight="26.0" prefWidth="62.0" />
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
@@ -221,7 +194,7 @@
       <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutY="397.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="1.0" layoutY="449.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="371.0" prefHeight="3.0" prefWidth="299.0" />
+      <Separator layoutY="354.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="296.0" layoutY="221.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="62.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="156.0" layoutY="373.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
@@ -230,6 +203,16 @@
       <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
->>>>>>> 52a6e3f654416ce662b59c61a13ceb13a465c298
+      <Label layoutX="70.0" layoutY="566.0" prefHeight="18.0" prefWidth="101.0" text="Consultation de la fiche de:">
+         <font>
+            <Font size="8.0" />
+         </font>
+      </Label>
+      <Label fx:id="Nom_prenom" layoutX="172.0" layoutY="566.0" prefHeight="18.0" prefWidth="123.0">
+         <font>
+            <Font name="System Italic" size="8.0" />
+         </font>
+      </Label>
+      <Label layoutX="61.0" layoutY="105.0" prefHeight="18.0" prefWidth="170.0" />
    </children>
 </AnchorPane>
