remplacement fiche validation par donnees BDD

--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -35,6 +35,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -109,19 +111,14 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="163.0" layoutY="256.0" text="80.00 €">
+      <Label fx:id="MontantUnuitee" layoutX="163.0" layoutY="256.0" text="80.00 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="163.0" layoutY="281.0" text="29.00 €">
+      <Label fx:id="MontantUrepas" layoutX="163.0" layoutY="281.0" text="29.00 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="20.0" layoutY="106.0" text="Mois :" textFill="#3f6bab">
-         <font>
-            <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Label>
       <Label layoutX="117.0" layoutY="334.0" text="Autres Frais" textFill="#3f6bab">
@@ -164,7 +161,7 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="MontantKilometrage" alignment="CENTER" layoutX="139.0" layoutY="306.0" prefHeight="14.0" prefWidth="82.0" text="0 €">
+      <Label fx:id="MontantUkilometrage" alignment="CENTER" layoutX="139.0" layoutY="306.0" prefHeight="14.0" prefWidth="82.0" text="0 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
@@ -214,5 +211,21 @@
          </font>
       </Label>
       <Label layoutX="61.0" layoutY="105.0" prefHeight="18.0" prefWidth="170.0" />
+      <MenuButton layoutX="80.0" layoutY="101.0" mnemonicParsing="false" text="Selectionner le mois">
+        <items>
+          <MenuItem mnemonicParsing="false" text="JANVIER" />
+            <MenuItem mnemonicParsing="false" text="FEVRIER" />
+            <MenuItem mnemonicParsing="false" text="MARS" />
+            <MenuItem mnemonicParsing="false" text="AVRIL" />
+            <MenuItem mnemonicParsing="false" text="MAI" />
+            <MenuItem mnemonicParsing="false" text="JUIN" />
+            <MenuItem mnemonicParsing="false" text="JUILLET" />
+            <MenuItem mnemonicParsing="false" text="AOUT" />
+            <MenuItem mnemonicParsing="false" text="SEPTEMBRE" />
+            <MenuItem mnemonicParsing="false" text="OCTOBRE" />
+            <MenuItem mnemonicParsing="false" text="NOVEMBRE" />
+            <MenuItem mnemonicParsing="false" text="DECEMBRE" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
