--- a/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
@@ -53,7 +53,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="muNuitee" layoutX="155.0" layoutY="167.0" prefHeight="17.0" prefWidth="81.0" text="80 €">
+      <Label fx:id="muNuitee" layoutX="155.0" layoutY="167.0" prefHeight="17.0" prefWidth="60.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
