--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -35,8 +35,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -144,7 +142,7 @@
       </Label>
       <Button layoutX="87.0" layoutY="476.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
       <Button layoutX="102.0" layoutY="521.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
-      <Button layoutX="75.0" layoutY="145.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
+      <Button layoutX="74.0" layoutY="108.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
@@ -161,7 +159,7 @@
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
-      <Label fx:id="MontantUkilometrage" alignment="CENTER" layoutX="139.0" layoutY="306.0" prefHeight="14.0" prefWidth="82.0" text="0 €">
+      <Label fx:id="MontantUkilometrage" alignment="CENTER" layoutX="162.0" layoutY="307.0" prefHeight="14.0" prefWidth="36.0" text="0 €">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
@@ -186,7 +184,7 @@
       <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="398.0" prefHeight="26.0" prefWidth="94.0" />
       <Label fx:id="AutreMontant2" layoutX="158.0" layoutY="398.0" prefHeight="26.0" prefWidth="72.0" />
       <Label fx:id="AutreDate3" layoutX="1.0" layoutY="424.0" prefHeight="26.0" prefWidth="62.0" />
-      <Label fx:id="AutreLibelle2" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
+      <Label fx:id="AutreLibelle3" layoutX="64.0" layoutY="424.0" prefHeight="26.0" prefWidth="94.0" />
       <Label fx:id="AutreMontant3" layoutX="158.0" layoutY="424.0" prefHeight="26.0" prefWidth="72.0" />
       <Separator layoutY="423.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutY="397.0" prefHeight="3.0" prefWidth="299.0" />
@@ -200,32 +198,26 @@
       <CheckBox fx:id="CheckKm2" layoutX="258.0" layoutY="402.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <CheckBox fx:id="CheckKm3" layoutX="258.0" layoutY="376.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="17.0" />
       <Label layoutX="243.0" layoutY="354.0" prefHeight="18.0" prefWidth="62.0" text="Validation" />
-      <Label layoutX="76.0" layoutY="182.0" prefHeight="18.0" prefWidth="148.0" text="Consultation de la fiche de:">
+      <Label layoutX="74.0" layoutY="152.0" prefHeight="18.0" prefWidth="148.0" text="Consultation de la fiche de:">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="Nom_prenom" alignment="CENTER" layoutX="61.0" layoutY="200.0" prefHeight="18.0" prefWidth="178.0">
+      <Label fx:id="Nom_prenom" alignment="CENTER" layoutX="61.0" layoutY="171.0" prefHeight="18.0" prefWidth="178.0">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
       <Label layoutX="61.0" layoutY="105.0" prefHeight="18.0" prefWidth="170.0" />
-      <MenuButton layoutX="80.0" layoutY="101.0" mnemonicParsing="false" text="Selectionner le mois">
-        <items>
-          <MenuItem mnemonicParsing="false" text="JANVIER" />
-            <MenuItem mnemonicParsing="false" text="FEVRIER" />
-            <MenuItem mnemonicParsing="false" text="MARS" />
-            <MenuItem mnemonicParsing="false" text="AVRIL" />
-            <MenuItem mnemonicParsing="false" text="MAI" />
-            <MenuItem mnemonicParsing="false" text="JUIN" />
-            <MenuItem mnemonicParsing="false" text="JUILLET" />
-            <MenuItem mnemonicParsing="false" text="AOUT" />
-            <MenuItem mnemonicParsing="false" text="SEPTEMBRE" />
-            <MenuItem mnemonicParsing="false" text="OCTOBRE" />
-            <MenuItem mnemonicParsing="false" text="NOVEMBRE" />
-            <MenuItem mnemonicParsing="false" text="DECEMBRE" />
-        </items>
-      </MenuButton>
+      <Label layoutX="82.0" layoutY="196.0" text="Du mois de:">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="Mois" layoutX="149.0" layoutY="196.0" prefHeight="18.0" prefWidth="87.0">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
