--- a/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
@@ -53,12 +53,12 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="muNuitee" layoutX="155.0" layoutY="167.0" prefHeight="17.0" prefWidth="60.0">
+      <Label fx:id="muNuitee" layoutX="153.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="muRepas" layoutX="155.0" layoutY="192.0" prefHeight="17.0" prefWidth="60.0">
+      <Label fx:id="muRepas" layoutX="153.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
@@ -116,7 +116,7 @@
             <Font name="Times New Roman Bold" size="20.0" />
          </font>
       </Label>
-      <Label fx:id="muKilometrage" layoutX="153.0" layoutY="217.0" prefHeight="17.0" prefWidth="60.0" text=" ">
+      <Label fx:id="muKilometrage" layoutX="153.0" layoutY="217.0" prefHeight="17.0" prefWidth="41.0" text=" ">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font></Label>
@@ -129,5 +129,8 @@
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font></Label>
+      <Label layoutX="197.0" layoutY="167.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label layoutX="197.0" layoutY="192.0" prefHeight="17.0" prefWidth="14.0" text="€" />
+      <Label layoutX="197.0" layoutY="217.0" prefHeight="17.0" prefWidth="14.0" text="€" />
    </children>
 </AnchorPane>
