--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -140,7 +140,7 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="85.0" layoutY="493.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" text="Valider" />
+      <Button layoutX="85.0" layoutY="493.0" mnemonicParsing="false" onAction="#valider" prefHeight="35.0" prefWidth="134.0" text="Valider" />
       <Button layoutX="17.0" layoutY="560.0" mnemonicParsing="false" onAction="#RetourClient" text="Revenir en arrière" />
       <Button layoutX="74.0" layoutY="108.0" mnemonicParsing="false" onAction="#Generer_ff" prefHeight="30.0" prefWidth="148.0" text="Générer Fiche de frais">
          <font>
