--- a/demo/src/main/resources/fr/projet_ap/Validation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Validation.fxml
@@ -221,7 +221,7 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="158.0" layoutY="460.0" mnemonicParsing="false" onAction="#Generer_af" prefHeight="25.0" prefWidth="134.0" text="Recharger autres frais" />
+      <Button layoutX="158.0" layoutY="460.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Recharger autres frais" />
       <Label layoutX="145.0" layoutY="551.0" prefHeight="17.0" prefWidth="148.0" text="Connecté(e) en tant que:">
          <font>
             <Font name="System Bold Italic" size="12.0" />
@@ -237,7 +237,7 @@
           <TableColumn fx:id="Af_Date" prefWidth="75.0" text="Date" />
           <TableColumn fx:id="Af_libelle" prefWidth="75.0" text="Libelle" />
             <TableColumn fx:id="Af_montant" prefWidth="75.0" text="Montant" />
-            <TableColumn fx:id="Af_Validation" prefWidth="75.0" text="Validation" />
+            <TableColumn fx:id="Af_Validation" minWidth="0.0" prefWidth="73.0" text="Validation" />
         </columns>
       </TableView>
    </children>
