--- a/demo/src/main/resources/fr/projet_ap/Consultation.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Consultation.fxml
@@ -3,6 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -41,19 +44,19 @@
       </Label>
       <Separator layoutX="-2.0" layoutY="163.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-2.0" layoutY="141.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="154.0" layoutY="146.0" text="Montant unitaire">
+      <Label layoutX="148.0" layoutY="146.0" text="Montant unitaire">
          <font>
-            <Font name="Times New Roman" size="12.0" />
+            <Font name="Times New Roman" size="11.0" />
          </font>
       </Label>
-      <Label layoutX="253.0" layoutY="146.0" prefHeight="14.0" prefWidth="36.0" text="Total">
+      <Label layoutX="245.0" layoutY="146.0" prefHeight="14.0" prefWidth="32.0" text="Total">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
       <Separator layoutX="97.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="145.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-      <Separator layoutX="241.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
+      <Separator layoutX="221.0" layoutY="163.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
       <Separator layoutX="-2.0" layoutY="188.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-1.0" layoutY="214.0" prefHeight="3.0" prefWidth="299.0" />
       <Separator layoutX="-2.0" layoutY="237.0" prefHeight="3.0" prefWidth="299.0" />
@@ -72,12 +75,12 @@
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="177.0" layoutY="168.0" text="80.00 €">
+      <Label layoutX="177.0" layoutY="168.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="177.0" layoutY="193.0" text="29.00 €">
+      <Label layoutX="177.0" layoutY="193.0">
          <font>
             <Font name="Times New Roman" size="12.0" />
          </font>
@@ -92,55 +95,38 @@
             <Font name="Times New Roman Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="38.0" layoutY="298.0" text="Date">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Separator layoutX="-1.0" layoutY="295.0" prefHeight="3.0" prefWidth="299.0" />
-      <Label layoutX="134.0" layoutY="298.0" text="Libellé">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="234.0" layoutY="298.0" text="Montant">
-         <font>
-            <Font name="Times New Roman" size="12.0" />
-         </font>
-      </Label>
-      <Separator layoutX="-2.0" layoutY="341.0" prefHeight="3.0" prefWidth="299.0" />
       <Button fx:id="BackButton" layoutX="15.0" layoutY="560.0" mnemonicParsing="false" onAction="#GoBack" text="Revenir en arrière" />
-      <Label fx:id="ttNuitee" layoutX="247.0" layoutY="167.0" prefHeight="17.0" prefWidth="44.0" textAlignment="CENTER" />
-      <Label fx:id="ttRepas" layoutX="247.0" layoutY="192.0" prefHeight="17.0" prefWidth="44.0" textAlignment="CENTER" />
-      <Label fx:id="ttNuitee" layoutX="247.0" layoutY="218.0" prefHeight="17.0" prefWidth="44.0" textAlignment="CENTER" />
-      <Separator layoutX="-1.0" layoutY="317.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="366.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="391.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="415.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutY="440.0" prefHeight="3.0" prefWidth="299.0" />
-      <Separator layoutX="91.0" layoutY="317.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="6.0" />
-      <Separator layoutX="210.0" layoutY="316.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="6.0" />
-      <Label layoutX="9.0" layoutY="320.0" prefHeight="17.0" prefWidth="81.0" textAlignment="CENTER" />
-      <Label layoutX="9.0" layoutY="344.0" prefHeight="17.0" prefWidth="81.0" textAlignment="CENTER" />
-      <Label layoutX="9.0" layoutY="370.0" prefHeight="17.0" prefWidth="81.0" textAlignment="CENTER" />
-      <Label layoutX="9.0" layoutY="394.0" prefHeight="17.0" prefWidth="81.0" textAlignment="CENTER" />
-      <Label layoutX="9.0" layoutY="418.0" prefHeight="17.0" prefWidth="81.0" textAlignment="CENTER" />
-      <Label layoutX="97.0" layoutY="320.0" prefHeight="17.0" prefWidth="110.0" textAlignment="CENTER" />
-      <Label layoutX="97.0" layoutY="344.0" prefHeight="17.0" prefWidth="110.0" textAlignment="CENTER" />
-      <Label layoutX="97.0" layoutY="371.0" prefHeight="17.0" prefWidth="110.0" textAlignment="CENTER" />
-      <Label layoutX="97.0" layoutY="394.0" prefHeight="17.0" prefWidth="110.0" textAlignment="CENTER" />
-      <Label layoutX="97.0" layoutY="418.0" prefHeight="17.0" prefWidth="110.0" textAlignment="CENTER" />
-      <Label layoutX="220.0" layoutY="320.0" prefHeight="17.0" prefWidth="72.0" textAlignment="CENTER" />
-      <Label layoutX="220.0" layoutY="344.0" prefHeight="17.0" prefWidth="72.0" textAlignment="CENTER" />
-      <Label layoutX="220.0" layoutY="371.0" prefHeight="17.0" prefWidth="72.0" textAlignment="CENTER" />
-      <Label layoutX="220.0" layoutY="394.0" prefHeight="17.0" prefWidth="72.0" textAlignment="CENTER" />
-      <Label layoutX="233.0" layoutY="418.0" prefHeight="17.0" prefWidth="72.0" textAlignment="CENTER" />
-      <Label layoutX="103.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label layoutX="103.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label layoutX="103.0" layoutY="218.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
-      <Label layoutX="177.0" layoutY="218.0" prefHeight="17.0" prefWidth="36.0" textAlignment="CENTER" />
-      <Label layoutX="152.0" layoutY="43.0" prefHeight="25.0" prefWidth="110.0" />
-      <Label layoutX="152.0" layoutY="70.0" prefHeight="25.0" prefWidth="110.0" />
-      <Button fx:id="Modifier" layoutX="217.0" layoutY="560.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="17.0" prefWidth="72.0" text="Modifier" />
+      <Label fx:id="ttNuitee" layoutX="227.0" layoutY="168.0" prefHeight="17.0" prefWidth="56.0" text=" " textAlignment="CENTER" />
+      <Label fx:id="ttRepas" layoutX="226.0" layoutY="193.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
+      <Label fx:id="ttKilometrage" layoutX="226.0" layoutY="218.0" prefHeight="17.0" prefWidth="56.0" textAlignment="CENTER" />
+      <Label fx:id="qunu" layoutX="103.0" layoutY="167.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="qure" layoutX="103.0" layoutY="192.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="quki" layoutX="103.0" layoutY="218.0" prefHeight="17.0" prefWidth="41.0" textAlignment="CENTER" />
+      <Label fx:id="prki" layoutX="149.0" layoutY="219.0" prefHeight="17.0" prefWidth="53.0" textAlignment="CENTER" />
+      <Label fx:id="matricule" layoutX="152.0" layoutY="43.0" prefHeight="25.0" prefWidth="110.0">
+         <font>
+            <Font name="Times New Roman Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="idConnexion" layoutX="152.0" layoutY="70.0" prefHeight="25.0" prefWidth="110.0">
+         <font>
+            <Font name="Times New Roman Bold Italic" size="12.0" />
+         </font></Label>
+      <TextField fx:id="mois" layoutX="60.0" layoutY="101.0" promptText="ex : Janvier" />
+      <Button fx:id="generer" layoutX="217.0" layoutY="101.0" mnemonicParsing="false" onAction="#Generer" text="Generer" />
+      <Label fx:id="prnu" layoutX="150.0" layoutY="168.0" prefHeight="17.0" prefWidth="53.0" text=" " />
+      <Label fx:id="prre" layoutX="149.0" layoutY="193.0" prefHeight="17.0" prefWidth="53.0" text=" " />
+      <Label layoutX="206.0" layoutY="168.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <Label layoutX="206.0" layoutY="193.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <Label layoutX="206.0" layoutY="219.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <Label layoutX="284.0" layoutY="168.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <Label layoutX="283.0" layoutY="193.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <Label layoutX="283.0" layoutY="218.0" prefHeight="17.0" prefWidth="16.0" text="€" />
+      <TableView layoutX="7.0" layoutY="287.0" prefHeight="247.0" prefWidth="287.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Date" />
+          <TableColumn prefWidth="139.0" text="Libellé" />
+            <TableColumn prefWidth="72.0" text="Montant" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
